# glad

./: CMakeLists.txt
glad/: glad.c
include/glad/: glad.h
